--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
         <div class="header-content">
             <div class="left-header">
                 <div class="h-shape"></div>
-                <div class="image">
+                <!-- <div class="image">
                     <img src="img/hero.png" alt="">
-                </div>
+                </div> -->
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Solano Milan Diaz.</span>
-                    A Web Developer.
+                    Hi, I'm <span>Abu Darda.</span>
+                    A CS Undergrad at Brac University.
                 </h1>
                 <p>
-                    I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                    henlo
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
