--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     A CS Undergrad at Brac University.
                 </h1>
                 <p>
-                    henlo
+                    henlbo
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="files/CV.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -40,22 +40,16 @@
     <main>
         <section class="container about" id="about">
             <div class="main-title">
-                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+                <h2>About <span>me</span><span class="bg-text">About Me</span></h2>
             </div>
             <div class="about-container">
                 <div class="left-about">
-                    <h4>Information About me</h4>
+                    <!-- <h4>Information About me</h4> -->
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
-                        vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-                        delectus dolore fugiat exercitationem a, 
-                        ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Harum non necessitatibus deleniti eum soluta.
+                        I am a final semester student at Brac University. I am an active competitive programmer currently working as a Student Tutor in the CSE Department of BRAC. I have interests in both Data Science and Software development.
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="files/CV.pdf" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
