--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 </head>
 <body class="main-content">
     <header class="container header active" id="home">
@@ -59,37 +61,60 @@
                     </div>
                 </div>
                 <div class="right-about">
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <a href="facebook.com">
-                            <p class="large-text">650+</p>
-                            <p class="small-text">Projects <br /> Completed</p>
-                            </a>
+                    <a href="https://www.linkedin.com/in/abuu-darda-287888174/">
+                        <div class="about-item">
+                            <div class="abt-text">
+                                <!-- <p class="large-text">650+</p> -->
+                                <i class="fab fa-linkedin"></i>
+                                <!-- <p class="small-text">Projects <br /> Completed</p> -->
+                            </div>
                         </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <p class="large-text">10+</p>
-                            <p class="small-text">Years of <br /> experience</p>
+                    </a>
+                    <a href="https://github.com/abuudarda">
+                        <div class="about-item">
+                            <div class="abt-text">
+                                <!-- <p class="large-text">650+</p> -->
+                                <i class="fab fa-github"></i>
+                                <!-- <p class="small-text">Projects <br /> Completed</p> -->
+                            </div>
                         </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <p class="large-text">300+</p>
-                            <p class="small-text">Happy <br /> Clients</p>
+                    </a>
+                    <a href="#">
+                        <div class="about-item">
+                            <div class="abt-text">
+                                <!-- <p class="large-text">650+</p> -->
+                                <!-- <i class="fab fa-google-scholar"></i> -->
+                                <i class="material-icons">school</i>
+
+                                <!-- <p class="small-text">Projects <br /> Completed</p> -->
+                            </div>
                         </div>
-                    </div>
-                    <div class="about-item">
-                        <div class="abt-text">
-                            <p class="large-text">400+</p>
-                            <p class="small-text">Customer <br /> reviews</p>
+                    </a>
+                    <a href="mailto:abuu.darda.ad@gmail.com">
+                        <div class="about-item">
+                            <div class="abt-text">
+                                <!-- <p class="large-text">650+</p> -->
+                                <i class="fa fa-envelope"></i>
+                                <!-- <i class="fa fa-envelope"></i> -->
+                                <!-- <i class="material-icons">school</i> -->
+
+                                <!-- <p class="small-text">Projects <br /> Completed</p> -->
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="about-stats">
                 <h4 class="stat-title">My Skills</h4>
-                <div class="progress-bars">
+                <ul>
+                    <li>Programming Languages: Python, C++, Java</li>
+                    <li>Database Experience: MySQL, SQLite</li>
+                    <li>Data Structures, Algorithms: Geometry, Graph Theory, Dynamic Programming, Number Theory.</li>
+                    <li>Android app development with Java</li>
+                    <li>LaTeX, MatLab</li>
+                </ul>
+                
+                <!-- <div class="progress-bars">
                     <div class="progress-bar">
                         <p class="prog-title">html5</p>
                         <div class="progress-con">
@@ -143,8 +168,8 @@
                                 <span class="python"></span>
                             </div>
                         </div>
-                    </div>
-                </div>
+                    </div> -->
+                <!-- </div> -->
             </div>
             <h4 class="stat-title">My Timeline</h4>
             <div class="timeline">
@@ -152,62 +177,52 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2010 - present</p>
-                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p class="tl-duration">2023 - present</p>
+                    <h5>Student Tutor<span> - Brac University</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        Algorithms
                     </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
+                        <i class="fas fa-school"></i>
                     </div>
-                    <p class="tl-duration">2008 - 2011</p>
-                    <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
+                    <p class="tl-duration">2020 - present</p>
+                    <h5>Bsc in Computer Science<span> - Brac University</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        Taken Courses
+                    </p>
+                    <ul>
+                        <li>Data Science</li>
+                        <li>Neural Networks</li>
+                        <li>Image Processing</li>
+                        <li>Natural Language Processing</li>
+                        <li>Android App Development</li>
+                        <li>Blockchain and Cryptocurrency</li>
+                        <li>Randomized Algorithms</li>
+                    </ul>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-school"></i>
+                    </div>
+                    <p class="tl-duration">2016 - 2018</p>
+                    <h5>HSC<span> - Birshreshtha Munshi Abdur Rouf Public College </span></h5>
+                    <p>
+                        GPA 5.0/5.0
                     </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
+                        <i class="fas fa-school"></i>
                     </div>
-                    <p class="tl-duration">2016 - 2017</p>
-                    <h5>C++ Programmer<span> - Slime Tech</span></h5>
+                    <p class="tl-duration">2016</p>
+                    <h5>SSC<span> - Bangladesh Gas Fields School and College</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        GPA 5.0/5.0
                     </p>
                 </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2009 - 2013</p>
-                    <h5>Business Degree<span> - Sussex University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2013 - 2016</p>
-                    <h5>Computer Science Degree<span> - Brookes University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2017 - present</p>
-                    <h5>3d Animation<span> - Brighton University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
+                
             </div>
         </section>
         <section class="container" id="portfolio">
@@ -454,8 +469,10 @@
                     <div class="left-contact">
                         <h4>Contact me here</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            In, laborum numquam? Quam excepturi perspiciatis quas quasi.
+                            This page is a random bullshit that was in the template and I was too
+                            lazy to delete it. If you click the download cv button below you'll get
+                            most of my academic resourses from bracu. (I was lazy to edit it as well)
+
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
@@ -534,7 +551,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="#" class="main-btn">
+                                <a href="https://drive.google.com/drive/folders/1q3zjC8LzsVU9FNyXcW1jYOdjZqmTF80_?usp=share_link" class="main-btn">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
