--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="header-content">
             <div class="left-header">
                 <div class="h-shape"></div>
-                <!-- <div class="image">
-                    <img src="img/hero.png" alt="">
-                </div> -->
+                <div class="image">
+                    <img src="img/cat.jpg" alt="">
+                </div>
             </div>
             <div class="right-header">
                 <h1 class="name">
