--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     A CS Undergrad at Brac University.
                 </h1>
                 <p>
-                    henlbo
+                    henlooo
                 </p>
                 <div class="btn-con">
                     <a href="files/CV.pdf" class="main-btn">
