--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="header-content">
             <div class="left-header">
                 <div class="h-shape"></div>
-                <div class="image">
+                <!-- <div class="image">
                     <img src="img/cat.jpg" alt="">
-                </div>
+                </div> -->
             </div>
             <div class="right-header">
                 <h1 class="name">
