--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    : London, united Kingdom
+                                    : 
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -491,7 +491,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span>: </span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -500,7 +500,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
+                                    <span>: </span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -518,7 +518,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span>: </span>
                                 </p>
                             </div>
                         </div>
