--- a/index.html
+++ b/index.html
@@ -144,72 +144,16 @@
                     </div>
                 </div> <!-- about-info -->
 
+                
 
-                <!-- <div class="row about-expertise" data-animate-block>
-                    <div class="column lg-12">
 
-                        <h2 class="text-pretitle" data-animate-el>Expertise</h2>
 
-                        <ul class="skills-list h3" data-animate-el>
-                            <li>Generative AI & LLMs
-                                <ul>
-                                    <li>Deep Learning</li>
-                                    <li>NLP</li>
-                                    <li>Multimodal AI (Text, Image, Audio)</li>
-                                    <li>LoRa</li>
-                                    <li>RLHF</li>
-                                </ul>
-                            </li>
-                            <li>Cloud & Services
-                                <ul>
-                                    <li>AWS</li>
-                                    <li>Azure</li>
-                                </ul>
-                            </li>
-                            <li>Backend
-                                <ul>
-                                    <li>Python</li>
-                                    <li>FastAPI</li>
-                                    <li>Node.js</li>
-                                </ul>
-                            </li>
-                            <li>Frontend
-                                <ul>
-                                    <li>React.js</li>
-                                    <li>JavaScript</li>
-                                </ul>
-                            </li>
-                            <li>Databases
-                                <ul>
-                                    <li>PostgreSQL</li>
-                                    <li>MongoDB</li>
-                                    <li>GraphQL</li>
-                                    <li>Vector Databases (e.g., Pinecone, FAISS)</li>
-                                </ul>
-                            </li>
-                            <li>Programming Languages
-                                <ul>
-                                    <li>Python</li>
-                                    <li>C++</li>
-                                    <li>Java</li>
-                                </ul>
-                            </li>
-                            <li>Tools & Frameworks
-                                <ul>
-                                    <li>TensorFlow</li>
-                                    <li>PyTorch</li>
-                                    <li>OpenAI</li>
-                                    <li>Langchain</li>
-                                    <li>Google Gemini</li>
-                                </ul>
-                            </li>
-                        </ul>
-
-                    </div>
-                </div> end about-expertise -->
+                <h2 class="text-pretitle" data-animate-el>
+                    Experience
+                </h2>
                 <section id="expertise" class="s-expertise">
 
-                    <div class="row s-expertise__content width-sixteen-col">
+                    <div class="row s-expertise__content width-sixteen-col" data-animate-block>
                         <div class="column xl-12 grid-block grid-section-split">
     
                             <div class="section-header grid-section-split__header">
