--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
 
                         <h1 class="text-huge-title">
                             I am ABU DARDA, <br>
-                            a CS grad & <br>
                             a fullstack AI  <br> 
                             developer  <br>
                             
@@ -144,7 +143,7 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                A Computer Science graduate passionate about Generative AI, LLMs, and Deep Learning, with experience in building scalable AI solutions using Python, and Node.js. Strong analytical and problem-solving skills, with a proven ability to drive innovation and deliver impactful AI applications
+                                A fullstack AI Engineer passionate about Generative AI, LLMs, and Deep Learning, with experience in building scalable AI solutions using Python, and Node.js. Strong analytical and problem-solving skills, with a proven ability to drive innovation and deliver impactful AI applications.
                             </p>
                             <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
