feat: minor changes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                         <h1 class="text-huge-title">
                             I am ABU DARDA, <br>
-                            a fullstack AI  <br> 
+                            a fullstack AI/ML  <br> 
                             developer  <br>
                             
                         </h1>
@@ -143,7 +143,7 @@
                                 About
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                A fullstack AI Engineer passionate about Generative AI, LLMs, and Deep Learning, with experience in building scalable AI solutions using Python, and Node.js. Strong analytical and problem-solving skills, with a proven ability to drive innovation and deliver impactful AI applications.
+                                A fullstack AI/ML Engineer passionate about Generative AI, LLMs, and Deep Learning, with experience in building scalable AI solutions using Python, and Node.js. Strong analytical and problem-solving skills, with a proven ability to drive innovation and deliver impactful AI applications.
                             </p>
                             <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
@@ -282,10 +282,11 @@
                                 </div>
                                 <div class="timeline__desc">
                                     <ul>
-                                        <li>Led Development and managed client interactions for the UpendNow project, ensuring timely and high-quality deliverables.</li>
-                                        <li>Actively collaborated in knowledge-sharing and training events, enhancing team skills and fostering collaborative learning.</li>
+                                        <li>Led development of B2B/B2C projects, managing end-to-end implementation to deliver high-quality results on time.</li>
+                                        <li>Managed client interactions to gather requirements, provide updates, and ensure alignment with client expectations.</li>
                                     </ul>
                                 </div>
+                                <a href="#works" class="btn btn--stroke u-fullwidth smoothscroll">View My Works</a>
                             </div>
     
                             <div class="timeline__block">
@@ -297,8 +298,8 @@
                                 </div>
                                 <div class="timeline__desc">
                                     <ul>
-                                        <li>Built and managed a Workflow Automation System, streamlining processes and showcasing automation capabilities.</li>
-                                        <li>Collaborated on a Chatbot Boilerplate project, contributing to scalable and reusable solutions for chatbot implementations.</li>
+                                        <li>Built and managed multiple B2B and POC projects, overseeing the development process.</li>
+                                        <li>Ensured project success by coordinating with stakeholders and delivering high-quality solutions within deadlines.</li>
                                     </ul>
                                 </div>
                             </div>
