--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     ================================================== -->
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
-
+    <link rel="stylesheet" href="css/custom-theme.css"> <!-- ADD THIS LINE -->
     <!-- favicons
     ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -37,6 +37,7 @@
 
 <body id="top">
 
+    <canvas id="bg-canvas"></canvas> <!-- ADD THIS LINE -->
 
     <!-- # preloader
     ================================================== -->
@@ -927,6 +928,8 @@
 
     <!-- Java Script
     ================================================== -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> <!-- ADD THIS LINE -->
+    <script src="js/three-background.js"></script> <!-- ADD THIS LINE -->
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
