--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 
                         </ul> <!-- end folio-list -->
                         <p class="h1" data-animate-el>
-                            And Here are some projects that I did back in college for fun.
+                            And Here are some of my perosnal projects.
                         </p>
                         <ul class="folio-list row block-lg-one-half block-stack-on-1000">
 
