chore: resume link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <ul>
                         <li><a href="index.html" class="home-link">DARDA.</a></li>
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
-                        <li><a href="#about" class="smoothscroll">About</a></li>
+                        <li><a href="#education-section" class="smoothscroll">About</a></li>
                         <li><a href="#works" class="smoothscroll">Works</a></li>
                         <li><a href="#contact" class="smoothscroll">Say Hello</a></li>
                     </ul>
@@ -152,7 +152,7 @@
                                 I am Proficient in <strong>Python, PostgreSQL, and cloud AI deployment</strong>
                             </p>
                                 <!-- A fullstack AI/ML Engineer passionate about Generative AI, LLMs, and Deep Learning, with experience in building scalable AI solutions using Python, and Node.js. Strong analytical and problem-solving skills, with a proven ability to drive innovation and deliver impactful AI applications. -->
-                            <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="https://drive.google.com/file/d/1MXV59jd3VbIX1dY8_tw9guDRQICHPOIN/view?usp=sharing" class="btn btn--medium u-fullwidth" data-animate-el>Download Resume</a>
 
                         </div>
                     </div>
