chore: minor fixes

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 <nav class="column lg-12 main-nav">
                     <ul>
                         <li><a href="index.html" class="home-link">DARDA.</a></li>
-                        <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
-                        <li><a href="#education-section" class="smoothscroll">About</a></li>
+                        <li class="current"><a href="#about" class="smoothscroll">Intro</a></li>
+                        <li><a href="#education-section" class="smoothscroll">Timeline</a></li>
                         <li><a href="#works" class="smoothscroll">Works</a></li>
                         <li><a href="#contact" class="smoothscroll">Say Hello</a></li>
                     </ul>
@@ -222,13 +222,16 @@
                                                 <strong>Frontend:</strong> React.js, JavaScript
                                             </p>
                                             <p>
-                                                <strong>Databases:</strong> ostgreSQL, MongoDB, GraphQL, Vector Databases
+                                                <strong>Databases:</strong> PostgreSQL, MongoDB, GraphQL, Vector Databases
+                                            </p>
+                                            <p>
+                                                <strong>Tools & Frameworks:</strong> TensorFlow, PyTorch, OpenAI, Langchain, LangGraph, Google Gemini, Git, Docker, Azure, GraphQL, Serverless.
                                             </p>
                                         </div>
                                     </div> <!-- list-expertise__item -->
                                     
                                     </div>
-                                    <div class="grid-list-items__item list-items__item">
+                                    <!-- <div class="grid-list-items__item list-items__item">
                                         <div class="grid-list-items__title list-items__item-header">
                                             <h3 class="list-items__item-title">Tools & Frameworks</h3>
                                         </div>
@@ -236,8 +239,8 @@
                                             <p>
                                                 TensorFlow, PyTorch, OpenAI, Langchain Google Gemini
                                             </p>
-                                        </div>
-                                    </div> <!-- list-expertise__item -->
+                                        </div> -->
+                                    <!-- </div> list-expertise__item -->
     
                                 </div> <!-- grid-list-items -->
                             </div> <!-- end s-expertise__content-main -->
@@ -817,6 +820,9 @@
                                     <ul class="modal-popup__cat">
                                         <li>Application</li>
                                     </ul>
+                                    <div class="s-expertise__content-btn grid-section-split__bottom">
+                                   <a href="https://peaceful-horse-9a0b7d.netlify.app" class="btn btn--stroke u-fullwidth" style="white-space: normal; height: auto; padding-top: 8px; padding-bottom: 8px; line-height: 1.3;">Try It</a>
+                               </div> <!-- end s-about__content-btn -->
                                 </div>
                             </div>
                         </div>
