--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   <body class="bg-neutral-50 text-neutral-900 antialiased selection:bg-neutral-900 selection:text-white">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+    <!-- trigger git workflow -->
   </body>
 </html>
